# libEval

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.md  README.md  configure  version.h.in
cli/: CMakeLists.txt  main.cpp
include/: calculator.h  evaluator.h
include/eval/: _eval.h  _utils.h  eval.h
lib/: CMakeLists.txt  calculator.cpp  eval.cpp  evaluator.cpp
tests/: CMakeLists.txt  test.cpp  test_1.cpp
